Added full quote list

--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
     }
 
     .container {
-      max-width: 800px;
-      padding: 2rem;
+      max-width: 900px;
+      padding: 2.5rem;
       text-align: center;
     }
 
     .quote {
-      font-size: clamp(1.4rem, 3vw, 2.2rem);
-      line-height: 1.4;
+      font-size: clamp(1.4rem, 3vw, 2.4rem);
+      line-height: 1.45;
+      white-space: pre-wrap;
     }
 
     .footer {
       margin-top: 2rem;
       font-size: 0.9rem;
-      opacity: 0.6;
+      opacity: 0.55;
     }
   </style>
 </head>
@@ -44,43 +45,112 @@
 
   <script>
     const quotes = [
-      "I heard it straight from the horse's hooves.",
-      "Seal in the deal.",
-      "Stop breathing down my throat.",
-      "Don't forget to dot your p’s and q’s.",
-      "I can finally see the end of the light",
-      "No sweat on my back",
-      "I named my AIM username inferiorjoel because I thought inferior meant superior.",
-      "I’d be stressed beyond wazooz.",
-      "From the top of my heart.",
-      "geez a loo",
-      "I wish I was more smarter.",
-      "That one made me think a bit, and I don't normally do that.",
-      "I’ll wait till you're out like a log.",
-      "I’m waiting on bated breath.",
-      "The most depressing book I ever rode.",
-      "I can’t wait to bite down on that itch.",
-      "We’re just touching the tips so far… wait, I mean… we’ve only seen the tip of the iceberg!",
-      "Don’t make a molehill out of an ant hill.",
-      "Put your money where your heart is.",
-      "Wide eyed and bushy tailed.",
-      "Words have been a weird lately.",
-      "Distance makes the fondness more fond.",
-      "Every day is a day."
-      // 👉 You can paste the full list here; this works with hundreds of entries
+`I heard it straight from the horse's hooves.`,
+`Seal in the deal.`,
+`Stop breathing down my throat.`,
+`Don't forget to dot your p’s and q’s.`,
+`My mind wanted to say, “dave is pressuring me into going to hardees”, but my body said, “Dave is yanking me hard to go.”`,
+`I can finally see the end of the light`,
+`No sweat on my back`,
+`Incoming! I'm coming on top of you!`,
+`I named my AIM username inferiorjoel because I thought inferior meant superior.`,
+`I’d be stressed beyond wazooz.`,
+`I’ve been pounding Norman all week.`,
+`From the top of my heart.`,
+`Looking for a costume for a party, puts “Men’s adult costumes” in google. Is surprised with the results.`,
+`geez a loo`,
+`“Look mom, look at my phallics!”`,
+`At the ice cream place: "hot fudge and oreos.. What's that?" Lady: "it's hot fudge... With oreos...."`,
+`:|`,
+`“Just trying to gag down my penis poles”`,
+`“Hold your asses for one moment”`,
+`Joel says simply, "words cannot" — “Apparently they can’t”`,
+`I’ll wait till you're out like a log.`,
+`Debbie: “Joel would murder, be in jail, live out his gay fantasies, the end.” Joel: “Doesn’t sound too bad”`,
+`I’m waiting on bated breath.`,
+`The most depressing book I ever rode.`,
+`Just enough to wet my nipples. Wet my appetite. Wet my whistle.`,
+`I can’t wait to bite down on that itch.`,
+`We’re just touching the tips so far… wait, I mean… we’ve only seen the tip of the iceberg!`,
+`Let your anus become one with the controller… I mean let your BRAIN become one!`,
+`They just pulled it out of the woodworks and made it a job!`,
+`“Not to be honest, but…”`,
+`I wish I was more smarter.`,
+`One day such and such was walking down the trees….`,
+`That one made me think a bit, and I don't normally do that.`,
+`"We need to wiggle a bit. Uhh, we need more wiggle room..."`,
+`“Leave a tip on the way out, or I’ll give you the tip.”`,
+`He meant “execute” but said “hand-murdered”.`,
+`"It reminds me of the smell of prap-or-ee... pot-por-ee?"`,
+`“Everyone go slap your seals.”`,
+`“I love audiobooks way better than reading.”`,
+`“Just being a friendly dick”`,
+`“You will freaking blow everyone’s minds into their skulls.”`,
+`“You mean slim pickings?”`,
+`Stop showing off your graphics. Keep it in your pants!`,
+`If the apocalypse happened, gluten free people would whittle away.`,
+`My eyes are falling asleep.`,
+`I’m up to my knees in Norman work.`,
+`Sticks and stones may hurt my bone but words will never hurt me.`,
+`I want to put myself in carbonation.`,
+`“I’m working your system to get more money”`,
+`In a meeting: “I’m like a swing man here.”`,
+`Just imagine having two hands!`,
+`"That hole is a tad big for me."`,
+`One or two things are gonna happen. 1, 2 or b.`,
+`"I keep slippin out of it"`,
+`If it's worth doing. It's worth doing hard.`,
+`“I don’t know why the dolphin swimming gets me so hard.”`,
+`Shit is unwreckable.`,
+`“James i'm just infiltrating the gay agenda from deep within.”`,
+`“Thanks guys but joy is healing my hole tonight.”`,
+`I can't think of it on the top of my head.`,
+`"Under your nails? Or under your skin?"`,
+`"Never hit a race horse in the mouth."`,
+`“So I've been busting a nut to get this Norman stuff done”`,
+`“Don’t make a molehill out of an ant hill.”`,
+`“It will be the clinch pin”`,
+`He's right at the perfect puberty age.`,
+`I was thinking about G’s.`,
+`I hope they make something amazing that will blow my pants off.`,
+`"you're sucking hard, but you can't get it to go up"`,
+`“My pants are tired”`,
+`Welcome to the big leagues!`,
+`Hey Bethany, don’t pigeon me holed!`,
+`Never tell a train station conductor not to…`,
+`They are 100% foreign.`,
+`Like a true neighbor, State Farm.`,
+`I was having a fun.`,
+`I could kill two stones with one bird.`,
+`Every time feels like it's my first.`,
+`That’s how a man does his business.`,
+`Too fast, Gwent soup.`,
+`If I was a troll, I wouldn’t wear shoes.`,
+`“It sounds like I should be covering your ass”`,
+`“I’m gonna make a La Croix boy out of you”`,
+`“Scratching the surface”`,
+`“I feel like I’m firing flaccid bullets”`,
+`Truth isn’t racist.`,
+`Deck the halls with balls of holly.`,
+`Everyone has their twerks!`,
+`I exist. Therefore I am.`,
+`Wide eyed and bushy tailed.`,
+`Words have been a weird lately.`,
+`Distance makes the fondness more fond.`,
+`Every day is a day.`
     ];
 
     function getDailyIndex(length) {
-      const today = new Date();
-      const daySeed = Math.floor(
-        Date.UTC(today.getFullYear(), today.getMonth(), today.getDate()) /
+      const now = new Date();
+      const dayNumber = Math.floor(
+        Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()) /
         86400000
       );
-      return daySeed % length;
+      return dayNumber % length;
     }
 
-    const index = getDailyIndex(quotes.length);
-    document.getElementById("quote").textContent = quotes[index];
+    document.getElementById("quote").textContent =
+      quotes[getDailyIndex(quotes.length)];
   </script>
 </body>
 </html>
