--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
       font-size: 0.9rem;
       opacity: 0.55;
     }
+
+    .face {
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <img src="jol.jpeg" class="face" alt="Joelism of the Day" width="200" />
     <div id="quote" class="quote"></div>
-    <div class="footer">A new one appears every day.</div>
   </div>
 
   <script>
