--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       font-size: clamp(1.4rem, 3vw, 2.4rem);
       line-height: 1.45;
       white-space: pre-wrap;
+      margin-bottom: 5rem;
     }
 
     .footer {
@@ -35,16 +36,12 @@
       font-size: 0.9rem;
       opacity: 0.55;
     }
-
-    .face {
-      border-radius: 50%;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="jol.jpeg" class="face" alt="Joelism of the Day" width="200" />
     <div id="quote" class="quote"></div>
+    <img src="jol.jpeg" class="face" alt="Joelism of the Day" width="200" />
   </div>
 
   <script>
